# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "2"
members = [
    "cantrip-ml-component",
    "cantrip-ml-coordinator",
    "cantrip-ml-interface",
    "cantrip-ml-shared",
    "fake-vec-core",
]
exclude = [
    "cantrip-ml-support",
    "kelvin-vec-core",
    "springbok-vec-core",
    "tests",
]

[workspace.dependencies]
bitflags = "1.3.2"
cantrip-io = { path = "../DebugConsole/cantrip-io" }
cantrip-memory-interface = { path = "../MemoryManager/cantrip-memory-interface" }
cantrip-ml-coordinator = { path = "./cantrip-ml-coordinator" }
cantrip-ml-interface = { path = "./cantrip-ml-interface" }
cantrip-ml-shared = { path = "./cantrip-ml-shared" }
cantrip-os-common = { path = "../cantrip-os-common" }
cantrip-proc-interface = { path = "../ProcessManager/cantrip-proc-interface" }
cantrip-security-interface = { path = "../SecurityCoordinator/cantrip-security-interface" }
cantrip-timer-interface = { path = "../TimerService/cantrip-timer-interface" }
log = { version = "0.4", features = ["release_max_level_info"] }
modular-bitfield = "0.11.2"
num_enum = { version = ">=0.6.1", default-features = false }
postcard = { version = "0.7", features = ["alloc"], default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
spin = "0.9"
static_assertions = "1.1"

[profile.dev]
opt-level = 0
debug = true
# TODO(b/223253186): workaround gdb DIE errors
lto = false
codegen-units = 1

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
split-debuginfo = "unpacked"

[profile.release.build-override]
opt-level = "z"
codegen-units = 1
