cargo-features = ["edition2021"]

[workspace]

members = [
    "cantrip-proc-component",
    "cantrip-proc-interface",
    "cantrip-proc-manager",
]


[profile.dev]
opt-level = 0
debug = true
# TODO(b/223253186): workaround gdb DIE errors
lto = false
codegen-units = 1

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
split-debuginfo = "unpacked"

[profile.release.build-override]
opt-level = "z"
codegen-units = 1
