# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cantrip-os-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["camkes_support"]
camkes_support = ["camkes", "copyregion", "cspace-slot", "logger_support", "slot-allocator"]
capdl_support = ["capdl", "model"]
logger_support = ["logger"]

[dependencies]
allocator = { path = "src/allocator" }
camkes = { path = "src/camkes", optional = true }
capdl = { path = "src/capdl", optional = true }
copyregion = { path = "src/copyregion", optional = true }
cspace-slot = { path = "src/cspace-slot", optional = true }
logger = { path = "src/logger", optional = true }
model = { path = "src/model", optional = true }
panic = { path = "src/panic" }
scheduling = { path = "src/scheduling" }
sel4-sys = { path = "src/sel4-sys" }
slot-allocator = { path = "src/slot-allocator", optional = true }
math = { path = "src/math" }
