cargo-features = ["edition2021"]

[package]
name = "cantrip-os-common"
version = "0.1.0"
edition = "2021"

[dependencies]
capdl = { path = "src/capdl" }
model = { path = "src/model" }
allocator = { path = "src/allocator" }
logger = { path = "src/logger" }
panic = { path = "src/panic" }
slot-allocator = { path = "src/slot-allocator" }
sel4-sys = { path = "src/sel4-sys" }
