cargo-features = ["edition2021"]

[package]
name = "cantrip-os-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["camkes_support"]
camkes_support = []

[dependencies]
allocator = { path = "src/allocator" }
camkes = { path = "src/camkes" }
capdl = { path = "src/capdl" }
copyregion = { path = "src/copyregion" }
cspace-slot = { path = "src/cspace-slot" }
logger = { path = "src/logger" }
model = { path = "src/model" }
panic = { path = "src/panic" }
sel4-sys = { path = "src/sel4-sys" }
slot-allocator = { path = "src/slot-allocator" }
