[package]
name = "cantrip-debug-console"
version = "0.1.0"
authors = ["Matt Harvey <mattharvey@google.com>"]
edition = "2018"
description = "Cantrip OS DebugConsole"

[dependencies]
panic-halt = "0.2.0"
cantrip-allocator = { path = "../cantrip-allocator" }
cantrip-io = { path = "../cantrip-io" }
cantrip-logger = { path = "../cantrip-logger" }
cantrip-panic = { path = "../cantrip-panic" }
cantrip-shell = { path = "../cantrip-shell" }
cantrip-uart-client = { path = "../cantrip-uart-client" }
log = "0.4"

[lib]
name = "cantrip_debug_console"
path = "src/run.rs"
crate-type = ["staticlib"]
