[package]
name = "cantrip-debug-console"
version = "0.1.0"
authors = ["Matt Harvey <mattharvey@google.com>"]
edition = "2021"
description = "Cantrip OS DebugConsole"

[features]
default = []
# Log level is Info unless LOG_DEBUG or LOG_TRACE are specified
LOG_DEBUG = []
LOG_TRACE = []

[dependencies]
panic-halt = "0.2.0"
cantrip-io = { path = "../cantrip-io" }
cantrip-os-common = { path = "../../cantrip-os-common" }
cantrip-shell = { path = "../cantrip-shell" }
cantrip-uart-client = { path = "../cantrip-uart-client" }
log = "0.4"

[lib]
name = "cantrip_debug_console"
path = "src/run.rs"
crate-type = ["staticlib"]
