cargo-features = ["edition2021"]

[package]
name = "cantrip-shell"
version = "0.1.0"
authors = ["Matt Harvey <mattharvey@google.com>"]
edition = "2021"
build = "build.rs"

[build-dependencies]
sel4-config = { path = "../../cantrip-os-common/src/sel4-config" }

[features]
default = []
CONFIG_DEBUG_BUILD = []
CONFIG_KERNEL_MCS = []

[dependencies]
crc = { version = "1.4.0", default_features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
cantrip-io = { path = "../cantrip-io" }
cantrip-line-reader = { path = "../cantrip-line-reader" }
cantrip-memory-interface = { path = "../../MemoryManager/cantrip-memory-interface" }
cantrip-proc-interface = { path = "../../ProcessManager/cantrip-proc-interface" }
cantrip-os-common = { path = "../../cantrip-os-common" }
cantrip-security-interface = { path = "../../SecurityCoordinator/cantrip-security-interface" }
cantrip-storage-interface = { path = "../../StorageManager/cantrip-storage-interface" }
log = "0.4"
zmodem = { path = "../zmodem" }
