# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cantrip-shell"
version = "0.1.0"
authors = ["Matt Harvey <mattharvey@google.com>"]
edition = "2021"
build = "build.rs"

[build-dependencies]
sel4-config = { path = "../../cantrip-os-common/src/sel4-config" }

[features]
default = [
    "TEST_GLOBAL_ALLOCATOR",
    "TEST_MAILBOX",
    "TEST_MEMORY_MANAGER",
    "TEST_ML_COORDINATOR",
    "TEST_PANIC",
    "TEST_SDK_RUNTIME",
    "TEST_SECURITY_COORDINATOR",
    "TEST_TIMER_SERVICE",
]
CONFIG_DEBUG_BUILD = []
CONFIG_PRINTING = []
CONFIG_KERNEL_MCS = []
# Commands that are likely not useful
FRINGE_CMDS = []
# Runtime tests for various services (please keep sorted)
TEST_GLOBAL_ALLOCATOR = []
TEST_MAILBOX = []
TEST_MEMORY_MANAGER = []
TEST_ML_COORDINATOR = []
TEST_PANIC = []
TEST_SDK_RUNTIME = []
TEST_SECURITY_COORDINATOR = []
TEST_TIMER_SERVICE = []
TEST_UART = []

[dependencies]
crc = { version = "1.4.0", default_features = false }
cpio = { git = "https://github.com/rcore-os/cpio" }
hashbrown = { version = "0.11", features = ["ahash-compile-time-rng"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
cantrip-io = { path = "../cantrip-io" }
cantrip-line-reader = { path = "../cantrip-line-reader" }
cantrip-memory-interface = { path = "../../MemoryManager/cantrip-memory-interface" }
cantrip-ml-interface = { path = "../../MlCoordinator/cantrip-ml-interface" }
cantrip-proc-interface = { path = "../../ProcessManager/cantrip-proc-interface" }
cantrip-os-common = { path = "../../cantrip-os-common" }
cantrip-security-interface = { path = "../../SecurityCoordinator/cantrip-security-interface" }
cantrip-storage-interface = { path = "../../StorageManager/cantrip-storage-interface" }
cantrip-timer-interface = { path = "../../TimerService/cantrip-timer-interface" }
cantrip-sdk-interface = { path = "../../SDKRuntime/cantrip-sdk-interface" }
log = { version = "0.4", features = ["release_max_level_info"] }
zmodem = { path = "../zmodem" }
