cargo-features = ["edition2021"]

[package]
authors = ["aarbuzov"]
name = "zmodem"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[dependencies]
crc = { version = "1.4.0", default_features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
cantrip-io = { path = "../cantrip-io" }
log = { version = "0.4.14", default-features = false }

[dev-dependencies]
env_logger = "0.9.0"
lazy_static = { version = "1.4.0", features = ["spin"] }
rand = "0.3.15"
