cargo-features = ["edition2021"]

[package]
name = "cantrip-memory-component"
version = "0.1.0"
edition = "2021"

[dependencies]
cantrip-memory-interface = { path = "../cantrip-memory-interface" }
cantrip-memory-manager = { path = "../cantrip-memory-manager" }
cantrip-os-common = { path = "../../cantrip-os-common" }
log = "0.4"
postcard = { version = "0.7", features = ["alloc"], default-features = false }

[lib]
name = "cantrip_memory_manager"
path = "src/run.rs"
crate-type = ["staticlib"]
