cargo-features = ["edition2021"]

[package]
name = "cantrip-memory-interface"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
sel4-config = { path = "../../cantrip-os-common/src/sel4-config" }

[features]
default = []
CONFIG_KERNEL_MCS = []

[dependencies]
postcard = { version = "0.7", features = ["alloc"], default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
cantrip-os-common = { path = "../../cantrip-os-common" }
log = "0.4"
smallvec = "1.2"
