[package]
name = "cantrip-memory-manager"
version = "0.1.0"
description = "Cantrip OS MemoryManager service"
edition = "2018"

[dependencies]
cantrip-os-common = { path = "../../cantrip-os-common" }
cantrip-memory-interface = { path = "../cantrip-memory-interface" }
log = "0.4"
smallvec = "1.2"
spin = "0.9"
