# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cantrip-ml-component"
version = "0.1.0"
authors = ["Adam Jesionowski <jesionowski@google.com>"]
edition = "2021"

[build-dependencies]
sel4-config = { path = "../../cantrip-os-common/src/sel4-config" }

[features]
CONFIG_PLAT_BCM2837 = []
CONFIG_PLAT_SPARROW = []
CONFIG_PLAT_NEXUS = []
CONFIG_DEBUG_BUILD = []

[dependencies]
cantrip-os-common.workspace = true
cantrip-memory-interface.workspace = true
cantrip-ml-coordinator.workspace = true
cantrip-ml-interface.workspace = true
cantrip-ml-shared.workspace = true
cantrip-timer-interface.workspace = true
log.workspace = true
postcard.workspace = true
spin.workspace = true

[lib]
name = "cantrip_ml_component"
path = "src/run.rs"
crate-type = ["staticlib"]
