# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cantrip-ml-coordinator"
version = "0.1.0"
authors = ["Adam Jesionowski <jesionowski@google.com>"]
edition = "2021"

[features]
default = ["springbok_support"]
springbok_support = [
    "springbok-vec-core",
    "cantrip-ml-support/springbok_support",
]

[dependencies]
cantrip-io.workspace = true
cantrip-os-common.workspace = true
cantrip-memory-interface.workspace = true
cantrip-ml-interface.workspace = true
cantrip-ml-shared.workspace = true
cantrip-proc-interface.workspace = true
cantrip-security-interface.workspace = true
cantrip-timer-interface.workspace = true
log.workspace = true
spin.workspace = true
static_assertions.workspace = true

cantrip-ml-support = { path = "../cantrip-ml-support" }
cstr_core = { version = "0.2.3", default-features = false }
springbok-vec-core = { path = "../springbok-vec-core", optional = true }
