# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cantrip-ml-component"
version = "0.1.0"
authors = ["Adam Jesionowski <jesionowski@google.com>"]
edition = "2021"

[dependencies]
cstr_core = { version = "0.2.3", default-features = false }
cantrip-os-common = { path = "../../cantrip-os-common" }
cantrip-memory-interface = { path = "../../MemoryManager/cantrip-memory-interface" }
cantrip-ml-coordinator = { path = "../cantrip-ml-coordinator" }
cantrip-ml-interface = { path = "../cantrip-ml-interface" }
cantrip-ml-shared = { path = "../cantrip-ml-shared" }
cantrip-timer-interface = { path = "../../TimerService/cantrip-timer-interface" }
log = "0.4"
spin = "0.9"

[lib]
name = "cantrip_ml_component"
path = "src/run.rs"
crate-type = ["staticlib"]
