[package]
name = "cantrip-ml-coordinator"
version = "0.1.0"
authors = ["Adam Jesionowski <jesionowski@google.com>"]
edition = "2018"

[dependencies]
cantrip-os-common = { path = "../../cantrip-os-common" }
cantrip-ml-interface = { path = "../cantrip-ml-interface" }
cantrip-vec-core = { path = "../cantrip-vec-core" }
log = "0.4"
xmas-elf = "0.8.0"

[lib]
name = "cantrip_ml_coordinator"
path = "src/run.rs"
crate-type = ["staticlib"]
