[package]
name = "cantrip-ml-coordinator"
version = "0.1.0"
authors = ["Adam Jesionowski <jesionowski@google.com>"]
edition = "2021"

[dependencies]
cstr_core = { version = "0.2.3", default-features = false }
cantrip-os-common = { path = "../../cantrip-os-common" }
cantrip-memory-interface = { path = "../../MemoryManager/cantrip-memory-interface" }
cantrip-ml-interface = { path = "../cantrip-ml-interface" }
cantrip-ml-shared = { path = "../cantrip-ml-shared" }
cantrip-security-interface = { path = "../../SecurityCoordinator/cantrip-security-interface" }
cantrip-timer-interface = { path = "../../TimerService/cantrip-timer-interface" }
cantrip-vec-core = { path = "../cantrip-vec-core" }
log = "0.4"
spin = "0.9"
