# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "springbok-vec-core"
version = "0.1.0"
edition = "2021"

[dependencies]
cantrip-io = { path = "../../DebugConsole/cantrip-io" }
cantrip-ml-interface = { path = "../cantrip-ml-interface" }
cantrip-ml-shared = { path = "../cantrip-ml-shared" }
cantrip-os-common = { path = "../../cantrip-os-common" }
cantrip-proc-interface = { path = "../../ProcessManager/cantrip-proc-interface" }
log = { version = "0.4", features = ["release_max_level_info"] }
modular-bitfield = "0.11.2"
reg_constants = { path = "../../cantrip-os-common/src/reg_constants", features = ["CONFIG_PLAT_SPARROW"] }
