# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cantrip-vec-core-unit-tests"
version = "0.1.0"
edition = "2018"

[features]
CONFIG_PLAT_SPARROW = []
CONFIG_PLAT_NEXUS = []

[dependencies]
bitflags = "1.3.2"
cantrip-ml-shared = { path = "../cantrip-ml-shared" }
modular-bitfield = "0.11.2"
reg_constants = { path = "../../cantrip-os-common/src/reg_constants" }

[lib]
path = "mod.rs"
